--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <img src="img/Lovology MS Glow - Glow and Lovely 9.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-9">
           <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-10">
 
+          <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-11">
+          <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-12">
+          <img src="img/Lovology MS Glow - Glow and Lovely 13.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-13">
+
           <!-- IMG END -->
 
           <!-- MAPS START -->
