gambar 13 di link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </div>
       </nav>
       <!-- NAVBAR - -->
+
     <!-- CNTNR1 START -->
     <div class="cntnr1">
         <!-- CONTAINER START -->
@@ -74,7 +75,8 @@
 
           <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-11">
           <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-12">
-          <img src="img/Lovology MS Glow - Glow and Lovely 13.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-13">
+          
+          <a href="https://bit.ly/LovologyProject2"><img src="img/Lovology MS Glow - Glow and Lovely 13.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-13"></a>
 
           <!-- IMG END -->
 
