hilangkan jarak antar img

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           </div> -->
           <!-- VIDEO END-->
 
-          <img src="img/Lovology MS Glow - Glow and Lovely 3.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-3">
-          <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-4">
-          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-5">
-          <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-6">
-          <img src="img/Lovology MS Glow - Glow and Lovely 7.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-7">
+          <img src="img/Lovology MS Glow - Glow and Lovely 3.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-3">
+          <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
+          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-5">
+          <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
+          <img src="img/Lovology MS Glow - Glow and Lovely 7.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-7">
 
           <!-- VIDEO START -->
           <div class="cntnr2">
@@ -69,12 +69,12 @@
           </div>
           <!-- VIDEO END -->
 
-          <img src="img/Lovology MS Glow - Glow and Lovely 8.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-8">
-          <img src="img/Lovology MS Glow - Glow and Lovely 9.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-9">
-          <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-10">
+          <img src="img/Lovology MS Glow - Glow and Lovely 8.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-8">
+          <img src="img/Lovology MS Glow - Glow and Lovely 9.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-9">
+          <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-10">
 
-          <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-11">
-          <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-12">
+          <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-11">
+          <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-12">
           
           <a href="https://bit.ly/LovologyProject2"><img src="img/Lovology MS Glow - Glow and Lovely 13.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-13"></a>
 
