tambah klik button

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
           <!-- VIDEO END-->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 3.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-3">
+
+          <!-- KLIK START -->
+          <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
+            <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
+          </span> </a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <!-- KLIK END -->
+
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
           <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-5">
           <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
@@ -71,6 +79,14 @@
 
           <img src="img/Lovology MS Glow - Glow and Lovely 8.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-8">
           <img src="img/Lovology MS Glow - Glow and Lovely 9.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-9">
+
+          <!-- KLIK START -->
+          <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
+            <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
+          </span> </a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <!-- KLIK END -->
+          
           <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-10">
 
           <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-11">
