--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
           </span> </a>
           <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
-          
+
           <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-10">
 
           <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-11">
           <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-12">
           
-          <a href="https://bit.ly/LovologyProject2"><img src="img/Lovology MS Glow - Glow and Lovely 13.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-13"></a>
+          <a href="https://bit.ly/LovologyProject2"><img src="img/Lovology MS Glow - Glow and Lovely 14.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-14"></a>
 
           <!-- IMG END -->
 
