tambah jarak klik button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <!-- VIDEO START -->
           <div class="cntnr2">
-              <video controls loop width="90%" src="vid/lovology-msglow-glow-and-lovely-video-1.mp4" title="LOVOLOGY GLOW AND LOVELY Video" allowfullscreen ride="true"></video>
+              <video controls loop width="90%" src="vid/lovology-msglow-glow-and-lovely-video-1.mp4" title="LOVOLOGY GLOW AND LOVELY Video" allowfullscreen ride="true" class="mt-3 mb-3"></video>
           </div>
 
           <!-- <div class="cntnr2">
@@ -61,18 +61,18 @@
           <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
             <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
           </span> </a>
-          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
-          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-5">
+          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-5">
           <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
           <img src="img/Lovology MS Glow - Glow and Lovely 7.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-7">
 
           <!-- VIDEO START -->
           <div class="cntnr2">
             <div class="ratio ratio-16x9">
-              <video controls muted autoplay loop src="vid/lovology-msglow-glow-and-lovely-video-2.mp4" title="LOVOLOGY DREAM Video" allowfullscreen ride="true"></video>
+              <video controls muted autoplay loop src="vid/lovology-msglow-glow-and-lovely-video-2.mp4" title="LOVOLOGY DREAM Video" allowfullscreen ride="true" class="mt-3 mb-3"></video>
             </div>
           </div>
           <!-- VIDEO END -->
@@ -84,7 +84,7 @@
           <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
             <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
           </span> </a>
-          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-10">
@@ -103,13 +103,14 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.83386032062964!2d112.69240308921798!3d-8.168281299702546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e78833a92f63c69%3A0x557a96fca9655203!2sKlinik%20Lovology%20%7C%20Konseling%20Pernikahan%20Lovologi%20%7C%20Konsultan%20Pernikahan%20Malang%20-%20Surabaya%20-%20Jakarta%20-%20Bali%20(Lovolog%20%26%20Konselor%20Keluarga%20-%20Psikolog%20Perkawinan)!5e0!3m2!1sid!2sid!4v1631507500236!5m2!1sid!2sid" width="900" height="900" style="border:0;" allowfullscreen="" loading="lazy" class="img-fluid"></iframe>
           </div>
           <!-- MAPS END -->
+
           <!-- <div class="mytitle2 fs-5 mb-5"></div> -->
 
           <!-- KLIK START -->
           <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
             <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
           </span> </a>
-          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
         </div>
