tambah jarak klik button2

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
             <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
           </span> </a>
-          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
@@ -110,7 +110,7 @@
           <a class="konseling-klik1 fs-3" href="https://bit.ly/LovologyProject2" target="_blank">KLIK SEKARANG <br> WA +62 8133456774 <span class="spanicon1">
             <i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i><i class="fas fa-arrow-down"></i>
           </span> </a>
-          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
+          <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
         </div>
