--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!-- KLIK END -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
-          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3 mb-3" alt="lovology-msglow-glow-and-lovely-5">
+          <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-5">
           <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
           <img src="img/Lovology MS Glow - Glow and Lovely 7.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-7">
 
