hapus link gambar 14

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 
           <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-11">
           <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-12">
-          
-          <a href="https://bit.ly/LovologyProject2"><img src="img/Lovology MS Glow - Glow and Lovely 14.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-14"></a>
+          <img src="img/Lovology MS Glow - Glow and Lovely 14.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-14">
 
           <!-- IMG END -->
 
