hapus jarak video1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <!-- VIDEO START -->
           <div class="cntnr2">
-              <video controls loop width="90%" src="vid/lovology-msglow-glow-and-lovely-video-1.mp4" title="LOVOLOGY GLOW AND LOVELY Video" allowfullscreen ride="true" class="mt-3 mb-3"></video>
+              <video controls loop width="90%" src="vid/lovology-msglow-glow-and-lovely-video-1.mp4" title="LOVOLOGY GLOW AND LOVELY Video" allowfullscreen ride="true" class="mt-3"></video>
           </div>
 
           <!-- <div class="cntnr2">
