--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
           <a href="https://bit.ly/LovologyProject2" target="_blank"><img src="img/Lovology MS Glow - Glow and Lovely c2.jpg" class="img-fluid px-5 mt-3" alt="lovology-msglow-glow-and-lovely-c2"></a>
           <!-- KLIK END -->
 
+          <!-- YOUTUBE START -->
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="mepet1"></iframe>
+          <!-- YOUTUBE CLOSE -->
+
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
           <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-5">
           <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
