--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <!-- KLIK END -->
 
           <!-- YOUTUBE START -->
-          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="mepet1"></iframe>
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!-- YOUTUBE CLOSE -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
