--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <!-- KLIK END -->
 
           <!-- YOUTUBE START -->
-          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="300px" src="https://www.youtube.com/embed/Y9m2XOZphns" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!-- YOUTUBE CLOSE -->
 
-          <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-4">
+          <img src="img/Lovology MS Glow - Glow and Lovely 4.jpg" class="img-fluid mt-2" alt="lovology-msglow-glow-and-lovely-4">
           <img src="img/Lovology MS Glow - Glow and Lovely 5.jpg" class="img-fluid mt-3" alt="lovology-msglow-glow-and-lovely-5">
           <img src="img/Lovology MS Glow - Glow and Lovely 6.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-6">
           <img src="img/Lovology MS Glow - Glow and Lovely 7.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-7">
@@ -93,16 +93,8 @@
           <!-- KLIK END -->
 
           <img src="img/Lovology MS Glow - Glow and Lovely 10.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-10">
-
           <img src="img/Lovology MS Glow - Glow and Lovely 11.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-11">
           <img src="img/Lovology MS Glow - Glow and Lovely 12.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-12">
-
-          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-
-          <!-- YOUTUBE START -->
-            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/KO8XBz4c5ic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <!-- YOUTUBE CLOSE -->
-
           <img src="img/Lovology MS Glow - Glow and Lovely 14.jpg" class="img-fluid" alt="lovology-msglow-glow-and-lovely-14">
 
           <!-- IMG END -->
